src/styles/Footer.scss
footer{
  background-color: var(--navbar-bg-color--);
}

footer:not(:first-child){
  border-top: 1px solid var(--header-border-color--);
}

footer .input-group-text{
  background-color: var(--navbar-bg-color--);
  color: white;
  padding: 8px 17px;

}

.padding-left{
  padding-left: 2vw;
}

